--- a/CSS/Assignment/copy-kitten/button.css
+++ b/CSS/Assignment/copy-kitten/button.css
@@ -5,7 +5,7 @@
 }
 
 #button{
-    background-color: steelblue;
+    background-color: rgb(216, 74, 235);
     text-decoration: none;
     color: white;
     border-radius: 5px;
